--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  # 数据库
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  # ui
   fluent_ui: ^4.4.0
   http: ^0.13.4
   logger: ^1.1.0
