--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  # bloc
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.3 #状态管理框架
+  equatable: ^2.0.5 #增强组件相等性判断
+  # 视频缩略图
+  video_thumbnail: ^0.5.0
+  # 屏幕唤醒
+  wakelock: ^0.6.2
   # video-player
   video_player: ^2.8.1
   # 数据库
