--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,4 +73,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "com.hierynomus:smbj:0.13.0"
 }
