--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   samba_browser: ^0.0.2
+  tmdb_api: ^2.2.0
 
 dev_dependencies:
   flutter_test:
