--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  event_bus: ^2.0.0 #事件总线
   # bloc
   bloc: ^8.1.0
   flutter_bloc: ^8.1.3 #状态管理框架
