--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   samba_browser: ^0.0.2
   tmdb_api: ^2.2.0
+  chewie: ^1.5.0
 
 dev_dependencies:
   flutter_test:
